# prompt2analytics

./: .dockerignore  .gitignore  .worktreeinclude  API_ENDPOINTS.md  CHANGELOG.md  CITATIONS.md  CLAUDE.md  Cargo.toml  DEVELOPMENT_REPORT.md  LICENSE-MIT  README.md  SPARK_HANDOFF.md  code_review_report.md  docker-compose.dev.yml  docker-compose.yml
crates/p2a-chat/: Cargo.toml
crates/p2a-chat/src/: lib.rs  main.rs
crates/p2a-cli/: Cargo.toml
crates/p2a-cli/src/: main.rs  memory.rs  output.rs  progress.rs  session.rs
crates/p2a-cli/src/commands/: causal.rs  chat.rs  data.rs  discrete.rs  ml.rs  mod.rs  munge.rs  panel.rs  regression.rs  script.rs  spatial.rs  stats.rs  survival.rs  timeseries.rs  viz.rs
crates/p2a-cli/tests/: integration_tests.rs
crates/p2a-core/: Cargo.toml  README.md  rust_comprehensive_20260111_114359.json  rust_comprehensive_20260111_200524.json  rust_comprehensive_20260112_065137.json  rust_comprehensive_20260112_090014.json  rust_comprehensive_20260112_205438.json  rust_comprehensive_20260112_211455.json  rust_comprehensive_20260112_212454.json  rust_comprehensive_20260112_212908.json  rust_comprehensive_20260113_083012.json  rust_comprehensive_20260119_054744.json  rust_comprehensive_20260119_055212.json  rust_comprehensive_20260119_062703.json  rust_comprehensive_20260119_070537.json  rust_comprehensive_20260119_074429.json  rust_comprehensive_20260119_074548.json  rust_comprehensive_20260119_083203.json  rust_comprehensive_20260119_083538.json  rust_comprehensive_20260119_093836.json  rust_comprehensive_20260119_094224.json  rust_comprehensive_20260119_102758.json  rust_comprehensive_20260119_103037.json  rust_comprehensive_20260119_105143.json  rust_comprehensive_20260119_111512.json  rust_comprehensive_20260119_114340.json  rust_comprehensive_20260119_114742.json  rust_comprehensive_20260119_114915.json  rust_comprehensive_20260119_134641.json  rust_comprehensive_20260119_141342.json  rust_comprehensive_20260119_142540.json  rust_comprehensive_20260119_155105.json  rust_comprehensive_20260119_162410.json  rust_comprehensive_20260119_182745.json  rust_comprehensive_20260119_183255.json  rust_comprehensive_20260119_183840.json  rust_comprehensive_20260119_194318.json  rust_comprehensive_20260119_205236.json  rust_comprehensive_20260119_213853.json  rust_comprehensive_20260120_095644.json  (+90 more)
crates/p2a-core/benches/: bench_utils.rs  benchmark_n10000.rs  cache_benchmarks.rs  causal_benchmarks.rs  clustering_benchmarks.rs  comprehensive_benchmarks.rs  data_loading_benchmarks.rs  econometrics_benchmarks.rs  forecasting_benchmarks.rs  gpu_benchmarks.rs  hypothesis_benchmarks.rs  ml_benchmarks.rs  multivariate_benchmarks.rs  munging_benchmarks.rs  new_methods_benchmarks.rs  regression_benchmarks.rs  spatial_advanced_benchmarks.rs  spatial_benchmarks.rs  string_benchmarks.rs  tracking_allocator.rs  unified_benchmarks.rs
crates/p2a-core/examples/: bench_batch2.rs  bench_batch3.rs  clustering.rs  hdbscan_bench.rs  hw_compare.rs  ml_benchmark.rs  ols_regression.rs  panel_data.rs  time_series.rs
crates/p2a-core/src/: cache.rs  errors.rs  lib.rs  memory.rs
crates/p2a-core/src/data/: cleaning_session.rs  database.rs  dataset.rs  loader.rs  mod.rs  quality.rs  sas.rs  stata.rs  suggestion.rs  verification.rs
crates/p2a-core/src/diagnostics/: did.rs  iv.rs  matching.rs  mod.rs  rd.rs  types.rs
crates/p2a-core/src/econometrics/: bacon.rs  bpbounds.rs  cbps.rs  convert.rs  ctmle.rs  did.rs  discrete.rs  doubleml.rs  etwfe.rs  feglm.rs  general_gmm.rs  gformula.rs  hdfe.rs  hettx.rs  iv.rs  ivmte.rs  ltmle.rs  matching.rs  medflex.rs  mediation.rs  mod.rs  panel.rs  panel_unit_root.rs  rd.rs  rdmulti.rs  sbw.rs  scpi.rs  spatial.rs  spatialprobit.rs  sphet.rs  splm.rs  staggered_did.rs  stdreg.rs  survival.rs  synth.rs  timeseries.rs  tmle.rs  treatment.rs  twang.rs  weightit.rs
crates/p2a-core/src/export/: csv.rs  html.rs  latex.rs  markdown.rs  mod.rs
crates/p2a-core/src/forecasting/: ar.rs  arima_model.rs  causal_impact.rs  changepoint.rs  cpgram.rs  decompose.rs  garch.rs  holtwinters.rs  kalman.rs  mod.rs  mstl.rs  stl.rs  structts.rs  tsutils.rs
crates/p2a-core/src/linalg/: design.rs  matrix_ops.rs  mod.rs  toeplitz.rs
crates/p2a-core/src/ml/: adaboost.rs  advanced_clustering.rs  advanced_trees.rs  apriori.rs  bart.rs  bart_causal.rs  c50.rs  cart.rs  causal_forest.rs  cluster_optimized.rs  cluster_validation.rs  clustering.rs  ctree.rs  cubist.rs  dual_tree.rs  evaluation.rs  evaluation_fast.rs  gbm.rs  ice.rs  interpretability.rs  kdtree.rs  lightgbm.rs  mars.rs  mboost.rs  mboost_fast.rs  mod.rs  pdp.rs  ppr.rs  quantile_rf.rs  reduction.rs  shap.rs  svm.rs  svm_fast.rs  trees.rs  xgboost.rs  xgboost_fast.rs
crates/p2a-core/src/regression/: diagnostics.rs  evalue.rs  glmnet.rs  gls.rs  line.rs  loess.rs  marginal_effects.rs  mod.rs  nls.rs  ols.rs  quantreg.rs  sensemakr.rs  smooth_spline.rs  step.rs  supsmu.rs
crates/p2a-core/src/reports/: html.rs  mod.rs
crates/p2a-core/src/simulation/: generator.rs  mod.rs
crates/p2a-core/src/spatial/: diagnostics.rs  mod.rs  weights.rs  (+1 more)
crates/p2a-core/tests/: benchmark_fast_implementations.rs  benchmark_ml_rust.rs  validation_boosting_methods.rs  validation_ml_advanced.rs  validation_ml_new.rs  validation_ml_new_methods.rs  validation_new_methods.rs
crates/p2a-desktop/: Cargo.toml  tauri.conf.json
crates/p2a-desktop/capabilities/: default.json
crates/p2a-desktop/src/: lib.rs  main.rs
crates/p2a-desktop/ui/: package-lock.json  package.json  svelte.config.js  vite.config.ts
crates/p2a-dioxus/: Cargo.toml  Dioxus.toml  index.html  package-lock.json  package.json
crates/p2a-dioxus/assets/: create_welcome.py  create_welcome_gif.py  styles.css
crates/p2a-dioxus/src/: app.rs  input.css  main.rs
crates/p2a-mcp/: Cargo.toml
crates/p2a-mcp/examples/: generate_tool_docs.rs
crates/p2a-mcp/src/: audit.rs  config.rs  lib.rs  main.rs  path_jail.rs  persistent_session.rs  server.rs  session.rs
crates/p2a-mcp/tests/: integration_tests.rs
paper/code/mc_validation/: Cargo.toml  README.md
(+1293 files in other folders)
