[workspace]
resolver = "2"
members = [
    "crates/p2a-core",
    "crates/p2a-mcp",
    "crates/p2a-desktop",
    "crates/p2a-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["prompt2analytics contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/umatter/prompt2analytics"
rust-version = "1.85"

[workspace.dependencies]
# DataFrame and data manipulation
polars = { version = "0.46", features = ["lazy", "csv", "parquet", "dtype-full"] }

# MCP Protocol
rmcp = { version = "0.8", features = ["server", "macros", "transport-io"] }
schemars = "1.0"

# Statistics and numerics
ndarray = "0.16"
statrs = "0.18"

# Linear algebra (pure Rust, no external BLAS dependency)
faer = "0.21"

# Parallel computation
rayon = "1.10"

# Time series forecasting
arima = "0.3"
augurs-core = "0.10"
augurs-mstl = "0.10"
augurs-ets = { version = "0.10", features = ["mstl"] }

# Random number generation (for ARIMA forecasting)
rand = "0.8"

# File format support
calamine = "0.32"  # Excel file reading (xlsx, xls, xlsb, ods)

# Database connectivity
rusqlite = { version = "0.33", features = ["bundled"] }
duckdb = { version = "1.2", features = ["bundled"] }

# Visualization
plotters = "0.3"
image = "0.24"

# Image encoding (for base64 output)
base64 = "0.22"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
rand_chacha = "0.3"
