[workspace]
resolver = "2"
members = [
    "crates/p2a-core",
    "crates/p2a-mcp",
    "crates/p2a-cli",
    "crates/p2a-chat",
    "crates/p2a-dioxus",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["prompt2analytics contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/umatter/prompt2analytics"
rust-version = "1.85"

[workspace.dependencies]
# DataFrame and data manipulation
polars = { version = "0.52", features = ["lazy", "csv", "parquet", "dtype-full", "diagonal_concat", "semi_anti_join", "cross_join", "pivot", "rows", "cum_agg", "rank", "strings", "timezones", "dtype-datetime", "dtype-date", "dtype-time", "dtype-duration"] }
polars-ops = { version = "0.52", features = ["pivot", "rank", "strings"] }

# MCP Protocol
rmcp = { version = "0.8", features = ["server", "macros", "transport-io"] }
schemars = "1.0"

# Statistics and numerics
ndarray = "0.16"
statrs = "0.18"
r_mathlib = "0.2"

# Linear algebra (pure Rust, no external BLAS dependency)
faer = "0.22"

# GPU acceleration (optional, requires CUDA toolkit)
cudarc = { version = "0.19", features = ["cublas", "cusolver", "driver", "std", "fallback-dynamic-loading", "cuda-version-from-build-system"], default-features = false }

# Parallel computation
rayon = "1.10"

# Regex support for string operations
regex = "1.10"

# Time series forecasting
arima = "0.3"
augurs-core = "0.10"
augurs-mstl = "0.10"
augurs-ets = { version = "0.10", features = ["mstl"] }
stlrs = "0.3"

# Random number generation (for ARIMA forecasting and simulation)
rand = "0.8"
rand_distr = "0.4"

# File format support
calamine = "0.32"  # Excel file reading (xlsx, xls, xlsb, ods)

# Database connectivity
rusqlite = { version = "0.33", features = ["bundled"] }
duckdb = { version = "1.2", features = ["bundled"] }

# Visualization
plotters = "0.3"
plotlars = "0.11"
image = "0.24"

# Image encoding (for base64 output)
base64 = "0.22"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
rand_chacha = "0.3"

# SIMD-optimized string operations
bytecount = { version = "0.6", features = ["runtime-dispatch-simd"] }

# Quadratic programming solver (pure Rust, Goldfarb-Idnani algorithm)
quadprog = "0.0.1"

# FFT for spectral analysis (O(n log n) instead of O(n²))
rustfft = "6.2"

[workspace.lints.clippy]
# Allow complex types - common in scientific computing with nested results
type_complexity = "allow"
# Allow many arguments - statistical functions often need many parameters
too_many_arguments = "allow"
# Allow manual clamp patterns - sometimes clearer than clamp()
manual_clamp = "allow"
# Allow methods named from_str without FromStr trait
should_implement_trait = "allow"
# Allow if-same-then-else in generated/boilerplate code
if_same_then_else = "allow"
# Allow needless range loops - sometimes clearer for matrix operations
needless_range_loop = "allow"
# Allow writing &mut Vec - sometimes required by API
ptr_arg = "allow"
# Allow doc formatting issues
doc_overindented_list_items = "allow"
# Allow comparison lints in test assertions
absurd_extreme_comparisons = "allow"
# Allow unwrap after is_none check patterns
unnecessary_unwrap = "allow"
# Allow manual strip patterns
manual_strip = "allow"
# Allow manual slice copy patterns in performance-sensitive code
manual_memcpy = "allow"
# Allow same item push patterns
same_item_push = "allow"
# Allow useless conversion lint
useless_conversion = "allow"
# Derive order lints - allow for complex structs
derive_ord_xor_partial_ord = "allow"
# Allow int_plus_one patterns
int_plus_one = "allow"
# Allow while_let_on_iterator patterns
while_let_on_iterator = "allow"
# Allow only_used_in_recursion
only_used_in_recursion = "allow"
# Allow wrong_self_convention for method naming
wrong_self_convention = "allow"
# Allow approx_constant for manual math constants
approx_constant = "allow"
# Allow if let on iterator
for_kv_map = "allow"
# Allow explicit counter variable
explicit_counter_loop = "allow"
# Allow unnecessary if let
collapsible_if = "allow"
# Allow manual flatten
manual_flatten = "allow"
# Allow unnecessary sort_by
unnecessary_sort_by = "allow"
# Doc lazy continuation
doc_lazy_continuation = "allow"
# Allow field reassignment outside initializer (common pattern for builders)
field_reassign_with_default = "allow"
# Allow suggesting Default implementation
new_without_default = "allow"
# Allow wildcard patterns that match everything
wildcard_in_or_patterns = "allow"
# Empty line after doc comment
empty_line_after_doc_comments = "allow"
# Format in format args
format_in_format_args = "allow"
# Redundant locals - sometimes needed for Dioxus closures
redundant_locals = "allow"

[workspace.lints.rust]
# Allow unused parens - sometimes needed for clarity
unused_parens = "allow"
# Allow deprecated - some Dioxus APIs in transition
deprecated = "allow"
# Allow unused variables in development
unused_variables = "allow"
# Allow dead code during development
dead_code = "allow"
# Allow unused imports during development
unused_imports = "allow"
# Allow unused assignments (often for intermediate values)
unused_assignments = "allow"
# Allow unused comparisons (usize >= 0 in tests)
unused_comparisons = "allow"

[workspace.lints.rustdoc]
# Allow missing documentation during development
missing_docs = "allow"
# Allow bare URLs in documentation (common in references sections)
bare_urls = "allow"
# Allow broken intra-doc links (brackets in math notation)
broken_intra_doc_links = "allow"
# Allow links to private items in documentation
private_intra_doc_links = "allow"
# Allow invalid HTML tags (e.g., <f64> in type signatures)
invalid_html_tags = "allow"
