[package]
name = "p2a-core"
description = "Core analytics engine for prompt2analytics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
# DataFrame and data manipulation
polars.workspace = true
polars-ops.workspace = true

# Statistics and numerics
ndarray.workspace = true
statrs.workspace = true

# Linear algebra (pure Rust)
faer.workspace = true

# Parallel computation
rayon.workspace = true

# Regex support for string operations
regex.workspace = true

# SIMD-optimized string operations
bytecount.workspace = true

# Time series forecasting
arima.workspace = true
augurs-core.workspace = true
augurs-mstl.workspace = true
augurs-ets.workspace = true
rand.workspace = true

# File format support
calamine.workspace = true

# Database connectivity
rusqlite.workspace = true
duckdb.workspace = true

# Visualization
plotters.workspace = true
image.workspace = true
base64.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Quadratic programming solver
quadprog.workspace = true

# Session management
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
criterion.workspace = true
rand_chacha.workspace = true
memory-stats = "1.2"
serde_json = { workspace = true }
chrono = "0.4"

[[bench]]
name = "regression_benchmarks"
harness = false

[[bench]]
name = "econometrics_benchmarks"
harness = false

[[bench]]
name = "ml_benchmarks"
harness = false

[[bench]]
name = "forecasting_benchmarks"
harness = false

[[bench]]
name = "comprehensive_benchmarks"
harness = false

[[bench]]
name = "munging_benchmarks"
harness = false

[[bench]]
name = "string_benchmarks"
harness = false

[[bench]]
name = "benchmark_n10000"
harness = false
