[package]
name = "p2a-core"
description = "Pure Rust econometrics, statistics, and machine learning library for data analysis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
keywords = ["econometrics", "statistics", "regression", "panel-data", "machine-learning"]
categories = ["science", "mathematics"]
readme = "README.md"

[features]
default = ["full"]
full = ["visualization", "forecasting", "file-formats", "database", "spectral-analysis"]
visualization = ["dep:plotters", "dep:plotlars", "dep:image", "dep:base64"]
forecasting = ["dep:arima", "dep:augurs-core", "dep:augurs-mstl", "dep:augurs-ets", "dep:stlrs"]
file-formats = ["dep:calamine"]
database = ["dep:rusqlite", "dep:duckdb"]
spectral-analysis = ["dep:rustfft"]

[dependencies]
# DataFrame and data manipulation
polars.workspace = true
polars-ops.workspace = true

# Statistics and numerics
ndarray.workspace = true
statrs.workspace = true
r_mathlib.workspace = true

# Linear algebra (pure Rust)
faer.workspace = true

# Parallel computation
rayon.workspace = true

# Regex support for string operations
regex.workspace = true

# SIMD-optimized string operations
bytecount.workspace = true

# Time series forecasting (optional - enable with "forecasting" feature)
arima = { workspace = true, optional = true }
augurs-core = { workspace = true, optional = true }
augurs-mstl = { workspace = true, optional = true }
augurs-ets = { workspace = true, optional = true }
stlrs = { workspace = true, optional = true }
rand.workspace = true
rand_distr.workspace = true

# File format support (optional - enable with "file-formats" feature)
calamine = { workspace = true, optional = true }

# Database connectivity (optional - enable with "database" feature)
rusqlite = { workspace = true, optional = true }
duckdb = { workspace = true, optional = true }

# Visualization (optional - enable with "visualization" feature)
plotters = { workspace = true, optional = true }
plotlars = { workspace = true, optional = true }
image = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Quadratic programming solver
quadprog.workspace = true

# FFT for spectral analysis (optional - enable with "spectral-analysis" feature)
rustfft = { workspace = true, optional = true }

# Session management
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Random number generation
rand_chacha.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
criterion.workspace = true
rand_chacha.workspace = true
tempfile = "3.10"
memory-stats = "1.2"
serde_json = { workspace = true }
chrono = "0.4"
approx = "0.5"

[[bench]]
name = "regression_benchmarks"
harness = false

[[bench]]
name = "econometrics_benchmarks"
harness = false

[[bench]]
name = "ml_benchmarks"
harness = false

[[bench]]
name = "forecasting_benchmarks"
harness = false

[[bench]]
name = "comprehensive_benchmarks"
harness = false

[[bench]]
name = "munging_benchmarks"
harness = false

[[bench]]
name = "string_benchmarks"
harness = false

[[bench]]
name = "benchmark_n10000"
harness = false

[[bench]]
name = "multivariate_benchmarks"
harness = false

[[bench]]
name = "hypothesis_benchmarks"
harness = false

[[bench]]
name = "new_methods_benchmarks"
harness = false

[[bench]]
name = "spatial_benchmarks"
harness = false

[[bench]]
name = "causal_benchmarks"
harness = false

[[bench]]
name = "spatial_advanced_benchmarks"
harness = false

[[bench]]
name = "clustering_benchmarks"
harness = false

[[bench]]
name = "cache_benchmarks"
harness = false

[[bench]]
name = "data_loading_benchmarks"
harness = false

# Examples
[[example]]
name = "ols_regression"

[[example]]
name = "panel_data"

[[example]]
name = "clustering"

[[example]]
name = "time_series"
required-features = ["forecasting"]

[[example]]
name = "hw_compare"
required-features = ["forecasting"]

[[example]]
name = "bench_batch2"

[[example]]
name = "bench_batch3"

[[example]]
name = "hdbscan_bench"

[lints]
workspace = true
