[package]
name = "p2a-dioxus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Dioxus web frontend for prompt2analytics"

[dependencies]
# Dioxus framework
dioxus = { version = "0.7", features = ["web"] }

# HTTP client with streaming support
reqwest = { version = "0.12", default-features = false, features = ["json"] }

# Async utilities
futures = "0.3"
wasm-bindgen-futures = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Browser APIs
gloo-storage = "0.3"
gloo-timers = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlTextAreaElement",
    "HtmlInputElement",
    "ScrollBehavior",
    "ScrollIntoViewOptions",
    "Response",
    "Headers",
    "RequestInit",
    "Request",
    "RequestMode",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "AbortController",
    "AbortSignal",
    "Blob",
    "TextDecoder",
] }
wasm-bindgen = "0.2"
js-sys = "0.3"

# Markdown parsing
pulldown-cmark = "0.12"

# Date/time
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "js"] }

# Logging
tracing = "0.1"
tracing-wasm = "0.2"
base64.workspace = true
