[package]
name = "p2a-mcp"
description = "MCP server for prompt2analytics - natural language data analytics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "p2a-mcp"
path = "src/main.rs"

[dependencies]
# Core analytics engine
p2a-core = { path = "../p2a-core" }

# Numerics (for ML tools)
ndarray.workspace = true

# MCP Protocol
rmcp.workspace = true
schemars.workspace = true

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Time
chrono = "0.4"

# HTTP server (optional, for web transport)
axum = { version = "0.8", features = ["ws", "macros"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }
dirs = { version = "5.0", optional = true }

# WebSocket (optional)
tokio-tungstenite = { version = "0.26", optional = true }

# Streaming
tokio-stream = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true }
async-stream = { version = "0.3", optional = true }

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "env"] }

# UUID for session IDs
uuid = { version = "1.11", features = ["v4"] }

# Database persistence (optional)
surrealdb = { version = "2.4", features = ["kv-rocksdb", "kv-mem"], optional = true }

# JWT authentication (optional)
jsonwebtoken = { version = "9.3", optional = true }

# LLM integration (optional)
async-trait = { version = "0.1", optional = true }
reqwest = { version = "0.12", features = ["json", "stream"], optional = true }
base64.workspace = true

[dev-dependencies]
polars.workspace = true

[features]
default = []
http = ["axum", "tower", "tower-http", "tokio-stream", "futures", "dirs", "async-stream"]
websocket = ["http", "tokio-tungstenite"]
auth = ["jsonwebtoken"]
llm = ["async-trait", "reqwest", "futures"]
db = ["surrealdb"]
full = ["http", "websocket", "auth", "llm", "db"]
