[package]
name = "mc-validation"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
p2a-core = { path = "../../../crates/p2a-core", default-features = false, features = ["forecasting", "file-formats", "database"] }
ndarray = "0.16"
polars = { version = "=0.52.0", features = ["lazy"] }
rand = "0.9"
rand_chacha = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
rayon = "1"
