[package]
name = "validation-runner"
version = "0.1.0"
edition = "2024"

[workspace]

[[bin]]
name = "run-validation"
path = "src/main.rs"

[dependencies]
p2a-core = { path = "../../../../crates/p2a-core" }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
ndarray = "0.16"
